// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api/npm should fetch package info from custom registry 1`] = `
Object {
  "dist-tags": Object {
    "latest": "0.0.1",
  },
  "homepage": undefined,
  "name": undefined,
  "renovate-config": undefined,
  "repositoryUrl": undefined,
  "versions": Object {
    "0.0.1": Object {
      "time": "",
    },
  },
}
`;

exports[`api/npm should fetch package info from npm 1`] = `
Object {
  "dist-tags": Object {
    "latest": "0.0.1",
  },
  "homepage": undefined,
  "name": undefined,
  "renovate-config": undefined,
  "repositoryUrl": "https://github.com/renovateapp/dummy",
  "versions": Object {
    "0.0.1": Object {
      "time": "",
    },
  },
}
`;

exports[`api/npm should replace any environment variable in npmrc 1`] = `
Object {
  "dist-tags": Object {
    "latest": "0.0.1",
  },
  "homepage": undefined,
  "name": undefined,
  "renovate-config": undefined,
  "repositoryUrl": undefined,
  "versions": Object {
    "0.0.1": Object {
      "time": "",
    },
  },
}
`;

exports[`api/npm should send an authorization header if provided 1`] = `
Object {
  "dist-tags": Object {
    "latest": "0.0.1",
  },
  "homepage": undefined,
  "name": undefined,
  "renovate-config": undefined,
  "repositoryUrl": undefined,
  "versions": Object {
    "0.0.1": Object {
      "time": "",
    },
  },
}
`;

exports[`api/npm should use NPM_TOKEN if provided 1`] = `
Object {
  "dist-tags": Object {
    "latest": "0.0.1",
  },
  "homepage": undefined,
  "name": undefined,
  "renovate-config": undefined,
  "repositoryUrl": undefined,
  "versions": Object {
    "0.0.1": Object {
      "time": "",
    },
  },
}
`;

exports[`api/npm should use default registry if missing from npmrc 1`] = `
Object {
  "dist-tags": Object {
    "latest": "0.0.1",
  },
  "homepage": undefined,
  "name": undefined,
  "renovate-config": undefined,
  "repositoryUrl": undefined,
  "versions": Object {
    "0.0.1": Object {
      "time": "",
    },
  },
}
`;

exports[`api/npm should use dummy time if missing 1`] = `
Object {
  "dist-tags": Object {
    "latest": "0.0.1",
  },
  "homepage": undefined,
  "name": undefined,
  "renovate-config": undefined,
  "repositoryUrl": undefined,
  "versions": Object {
    "0.0.1": Object {
      "time": "2017-01-01T12:00:00.000Z",
    },
  },
}
`;

exports[`api/npm should use homepage 1`] = `
Object {
  "dist-tags": Object {
    "latest": "0.0.1",
  },
  "homepage": "https://google.com",
  "name": undefined,
  "renovate-config": undefined,
  "repositoryUrl": "https://google.com",
  "versions": Object {
    "0.0.1": Object {
      "time": "",
    },
  },
}
`;
